--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
-<html> {
-  border-width: 10px;
+html, body{
+  margin: auto;
+  padding: 0;
+  height: 100%;
+  font-family: georgia;
+}
+
+body{
+  background-color: lightgray;
+}
+h1{
+  font-size: 1.8 em;
+}
+p {
+  font-size: 1.2 em;
 }
