--- a/style.css
+++ b/style.css
@@ -7,15 +7,16 @@ html, body{
 
 body{
   background-color: lightgray;
-<<<<<<< HEAD
   font-family: sans-serif;
-=======
   font-family: cursive;
->>>>>>> af16d1676d2e75dfde95a8e45840089d6bb1a46e
+  width: auto;
+  max-width: 60%;
 }
+
 h1{
   font-size: 1.8 em;
 }
+
 p {
   font-size: 1.2 em;
 }
