La til en footer så vi fikk litt space på bunnen av nettsiden

--- a/style.css
+++ b/style.css
@@ -20,3 +20,9 @@ p, li {
   font-size: 1.2 em;
   line-height: 150%;
 }
+
+footer{
+  font-size: .7em;
+  margin-top: 30px;
+  margin-bottom: 5px;
+}
