The great work is ongoing

--- a/P2/style.css
+++ b/P2/style.css
@@ -16,7 +16,7 @@ h1{
   font-size: 1.8em;
 }
 
-p {
+p, li {
   font-size: 1.2em;
   line-height: 150%;
 }
@@ -27,16 +27,6 @@ footer{
   margin-bottom: 5px;
 }
 
-.Mockup{
-  position: relative;
-  max-width: 60%;
-  display: block;
-  margin: auto;
-  border: black;
-  border-width: thick;
-  border-style: solid;
-}
-
-li {
-  line-height: 150%;
+table, th, td {
+	border: 1px solid black;
 }
