--- a/P2/style.css
+++ b/P2/style.css
@@ -6,7 +6,7 @@ html, body{
 }
 
 body{
-  background-color: lightgray;
+  background-color: lightsteelblue;
   font-family: sans-serif;
   width: auto;
   max-width: 60%;
