--- a/P2/style.css
+++ b/P2/style.css
@@ -10,6 +10,7 @@ body{
   font-family: sans-serif;
   width: auto;
   max-width: 60%;
+  padding-bottom: 5%;
 }
 
 h1{
@@ -39,6 +40,8 @@ footer{
 
 table, th, td {
 	border: 1px solid black;
+  font-size: 1.2em;
+  text-align: center;
 }
 
 li {
