--- a/P2/style.css
+++ b/P2/style.css
@@ -2,15 +2,13 @@ html, body{
   margin: auto;
   padding: 0;
   height: 100%;
-  font-family: georgia;
 }
 
 body{
   background-color: lightsteelblue;
-  font-family: sans-serif;
+  font-family: Helvetica, sans-serif;
   width: auto;
   max-width: 60%;
-  padding-bottom: 5%;
 }
 
 h1{
@@ -20,12 +18,6 @@ h1{
 p{
   font-size: 1.2em;
   line-height: 150%;
-}
-
-footer{
-  font-size: .7em;
-  margin-top: 30px;
-  margin-bottom: 5px;
 }
 
 .Mockup{
@@ -45,7 +37,8 @@ table, th, td {
 }
 table{
   position: relative;
-  margin: auto;
+  margin-left: auto;
+	margin-right: auto;
   display: block;
 	margin-bottom: 8%;
 }
