--- a/P3/style.css
+++ b/P3/style.css
@@ -1,3 +1,21 @@
 .arkiv_video{
   border-style: none;
+  width: 100%;
+}
+
+.arkiv_video_omrade{
+  display: flex;
+  grid-area: 2/2;
+}
+
+.abc{
+   grid-area: 3/2;
+   background-color: red;
+ }
+
+
+
+.arkiv_body{
+  display: grid;
+  grid-template: 1fr 3fr 3fr 4fr 1fr/1fr 8fr 1fr;
 }
