--- a/P3/style.css
+++ b/P3/style.css
@@ -19,3 +19,39 @@
   display: grid;
   grid-template: 1fr 3fr 3fr 4fr 1fr/1fr 8fr 1fr;
 }
+
+.html_shell{
+  height: 100%;
+}
+
+.entire_page{
+  display: grid;
+  grid-template: 80px 1fr 10%/10% 1fr 10%;
+  min-height: 100%;
+  margin: 0;
+
+}
+
+.header_element{
+  display: flex;
+  grid-area: 1/1/2/4;
+  background-color: gray;
+}
+
+.body_element{
+  display: flex;
+  grid-area: 2/2/3/3;
+  background-color: lightgray;
+}
+
+.footer_element{
+  display: flex;
+  grid-area: 3/1/4/4;
+  background-color: darkgray;
+}
+
+#logo_image{
+  position: absolute;
+  max-width: 80px;
+  max-height: 80px;
+}
