--- a/P3/style.css
+++ b/P3/style.css
@@ -1,11 +1,23 @@
-.arkiv_video{
-  border-style: none;
-  width: 100%;
-}
 
+.Arkiv_Bilder{
+  padding: 5px;
+  display: grid;
+  grid-template-columns: repeat(5,1fr);
+  grid-column-gap: 10px;
+
+}
+.Arkiv_Bilder img{
+  max-width: 100%; /*Maks størrelse skal være grid størrelsen til Arkiv_Bilder*/
+
+}
 .arkiv_video_omrade{
-  display: flex;
-  grid-area: 2/2;
+  padding-top: 5px;
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  grid-column-gap: 10px;
+}
+.arkiv_video_omrade iframe{
+  width: 100%;
 }
 
 .abc{
@@ -14,12 +26,14 @@
  }
 
 
-
+/*
 .arkiv_body{
+  max-width: 100%;
   display: grid;
-  grid-template: 1fr 3fr 3fr 4fr 1fr/1fr 8fr 1fr;
+  grid-template-rows: 1fr 3fr 3fr  1fr;
+  grid-template-columns: 1fr 8fr 1fr;
 }
-
+*/
 .html_shell{
   height: 100%;
 }
@@ -27,7 +41,7 @@
 .entire_page{
   display: grid;
   grid-template: 80px 1fr 10%/10% 1fr 10%;
-  min-height: 100%;
+  min-height: 100vh; /*siden skal dekke hele viewporten*/
   margin: 0;
 
 }
@@ -41,7 +55,18 @@
 .body_element{
   display: flex;
   grid-area: 2/2/3/3;
+  flex-direction: column;
   background-color: lightgray;
+
+}
+ #arkiv_body{
+   padding-left: 5px;
+   padding-right: 5px;
+   padding-bottom: 5px;
+  /*testing unit*/
+  border-radius: 10px;
+  border-color: red;
+  border-style: solid;
 }
 
 .footer_element{
