--- a/P3/style.css
+++ b/P3/style.css
@@ -1,7 +1,8 @@
 
 .Arkiv_Bilder{
-  padding: 5px;
+
   display: grid;
+  grid-template-rows: 0.2fr 1fr;
   grid-template-columns: repeat(5,1fr);
   grid-column-gap: 10px;
 
@@ -11,10 +12,11 @@
 
 }
 .arkiv_video_omrade{
-  padding-top: 5px;
+
   display: grid;
   grid-template-columns: repeat(3,1fr);
   grid-column-gap: 10px;
+  justify-content: center;
 }
 .arkiv_video_omrade iframe{
   width: 100%;
@@ -60,15 +62,26 @@
 
 }
  #arkiv_body{
+
    padding-left: 5px;
    padding-right: 5px;
    padding-bottom: 5px;
   /*testing unit*/
-  border-radius: 10px;
+/*  border-radius: 10px;
   border-color: red;
-  border-style: solid;
+  border-style: solid;*/
 }
+.arkiv_title , .arkiv_title_3{
+  margin: 0;
+  margin-bottom: 2px;
+}
+.arkiv_title{
+  grid-column: 1/6;
 
+}
+.arkiv_title_3{
+  grid-column: 1/4;
+}
 .footer_element{
   display: flex;
   grid-area: 3/1/4/4;
