--- a/P3/style.css
+++ b/P3/style.css
@@ -3,6 +3,7 @@
 }
 
 
+
 .Arkiv_Bilder{
 
   display: grid;
@@ -59,6 +60,12 @@ iframe{
 #hovedside_boks{
   grid-column: 1/3;
   justify-content: center;
+}
+.nyheter_boks{
+  grid-column: 1/3;
+  border-radius: 2px;
+  border-color: red;
+  border: solid;
 }
 .arkiv_title , .arkiv_title_3{
   margin: 0;
