--- a/P3/style.css
+++ b/P3/style.css
@@ -1,7 +1,10 @@
 * {
   font-family: Helvetica, sans-serif;
 }
-
+img{
+  max-width: 100%;
+  max-height: 100%;
+}
 
 
 .Arkiv_Bilder{
@@ -57,15 +60,18 @@ iframe{
   display: grid;
   grid-template-columns: repeat(4,1fr);
 }
-#hovedside_boks{
-  grid-column: 1/3;
-  justify-content: center;
-}
+
 .nyheter_boks{
   grid-column: 1/3;
+  justify-content: center;
   border-radius: 2px;
   border-color: red;
-  border: solid;
+  border-style: solid;
+}
+.tekst_boks{
+  border-radius: 1px;
+  border-color: black;
+  border-style: solid;
 }
 .arkiv_title , .arkiv_title_3{
   margin: 0;
