--- a/P3/style.css
+++ b/P3/style.css
@@ -56,22 +56,31 @@ iframe{
   border-color: red;
   border-style: solid;*/
 }
-#hovedside_body{
+#hovedside_boks{
   display: grid;
   grid-template-columns: repeat(4,1fr);
+  grid-template-rows: 50px auto;
 }
 
 .nyheter_boks{
-  grid-column: 1/3;
+  grid-column-start:1;
+  grid-column-end: 3;
   justify-content: center;
+  grid-gap: 2000px;
   border-radius: 2px;
   border-color: red;
   border-style: solid;
 }
 .tekst_boks{
+  grid-row: 2/3;
+  grid-column: 1/3;
   border-radius: 1px;
   border-color: black;
   border-style: solid;
+}
+#festet{
+ grid-column: 3;
+ grid-row: 1/3;
 }
 .arkiv_title , .arkiv_title_3{
   margin: 0;
