--- a/P3/style.css
+++ b/P3/style.css
@@ -127,3 +127,20 @@ width: 100%;
 .lederbilde {
 
 }
+
+.oversikt_undergrupper_boks{
+
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  grid-column-gap: 25px;
+  grid-template-rows: repeat(4,1fr);
+  grid-row-gap: 25px;
+  justify-content: center;
+}
+.undergrupper_boks{
+  grid-row: 1/3;
+  grid-column: 1/3;
+  border-radius: 1px;
+  border-color: black;
+  border-style: solid;
+}
