--- a/P3/style.css
+++ b/P3/style.css
@@ -16,7 +16,7 @@ p {
   min-height: 10vh;
   display: grid;
   grid-template-rows: 0.15fr 1fr;
-  grid-template-columns: repeat(5,1fr);
+  grid-template-columns:0.1fr repeat(5,1fr) 0.1fr;
   grid-column-gap: 0px;
   justify-content: center;
 
@@ -76,6 +76,28 @@ height: 100%
   border-color: red;
   border-style: solid;*/
 }
+.arkiv_title , .arkiv_title_3{
+  margin: 0;
+  margin-bottom: 2px;
+}
+.arkiv_title{
+  grid-column: 1/end;
+
+}
+.knapp_l{
+    width: 40px;
+    height: 100%;
+    position: relative;
+    left: 0px;
+
+
+}
+.knapp_r{
+  width: 40px;
+  height: 100%;
+  position: relative;
+  left: 0px
+}
 .banner{
   position: absolute;
   left: 0;
@@ -111,17 +133,6 @@ height: 100%
 #kalender_boks{
   grid-column: 4;
   grid-row: 1/3;
-}
-.arkiv_title , .arkiv_title_3{
-  margin: 0;
-  margin-bottom: 2px;
-}
-.arkiv_title{
-  grid-column: 1/6;
-
-}
-.arkiv_title_3{
-  grid-column: 1/4;
 }
 
 .navbar{
