Difus commitmelding da jeg for 4 dager siden glemte å committe

--- a/P3/style.css
+++ b/P3/style.css
@@ -35,7 +35,8 @@ p {
 }
 .img_in_focus{ /* brukes for å få et bilde i fokus*/
   position: absolute;
-  width: 70%;
+  max-height: 70vh;
+  max-width: 70vw;/* TODO: FIXthis thingy */
   left: 0px;
   top:80px;
   padding: 10vh 15vw 0px 15vw;
