--- a/P3/style.css
+++ b/P3/style.css
@@ -187,3 +187,21 @@ height: 100%
   border-color: black;
   border-style: solid;
 }
+
+.dropdown_btn:hover #undergrupper_dropdown{
+  display: block;
+}
+
+#undergrupper_dropdown{
+  display: none;
+  position: absolute;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.4);
+  z-index: 1;
+}
+
+#undergrupper_dropdown a{
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
