--- a/P3/style.css
+++ b/P3/style.css
@@ -28,10 +28,10 @@ p {
   padding: 2.5%;
 }
 .hoverable:hover{
+    padding:0px;
   width: 100%;
-  max-width: 100%; /*Maks størrelse skal være grid størrelsen til Arkiv_Bilder*/
   height: 100%;
-  padding:0%;
+
 }
 .img_in_focus{ /* brukes for å få et bilde i fokus*/
   position: absolute;
@@ -39,9 +39,7 @@ p {
   max-width: 70vw;/* TODO: FIXthis thingy */
   left: 0px;
   top:80px;
-  padding: 10vh 15vw 0px 15vw;
-
-  /*i js, settes paddingBottom resterende arkiv høyde*/
+  /*i js, settes  paddings etter bildets og skjermens størrelse, top er alltid lik 10vh*/
   background-color: rgba(0,0,0,0.7);
 
 }
