--- a/P3/style.css
+++ b/P3/style.css
@@ -36,9 +36,10 @@ p {
 .img_in_focus{ /* brukes for å få et bilde i fokus*/
   position: absolute;
   max-height: 70vh;
-  max-width: 70vw;/* TODO: FIXthis thingy */
+  max-width: 70vw;
   left: 0px;
   top:80px;
+  z-index: 1;
   /*i js, settes  paddings etter bildets og skjermens størrelse, top er alltid lik 10vh*/
   background-color: rgba(0,0,0,0.7);
 
@@ -73,10 +74,7 @@ height: 100%
    padding-left: 5px;
    padding-right: 5px;
    padding-bottom: 5px;
-  /*testing unit*/
-/*  border-radius: 10px;
-  border-color: red;
-  border-style: solid;*/
+
 }
 .arkiv_title , .arkiv_title_3{
   margin: 0;
@@ -86,19 +84,13 @@ height: 100%
   grid-column: 1/end;
 
 }
-.knapp_l{
-    width: 40px;
-        position: relative;
-    left: 0px;
-
-
-}
-.knapp_r{
+.knapp{
   width: 40px;
-
   position: relative;
-  left: 0px
+  left: 0px;
+  z-index: 0;
 }
+
 .banner{
   position: absolute;
   left: 0;
