Sliding-banner del 1

--- a/P3/style.css
+++ b/P3/style.css
@@ -93,15 +93,17 @@ height: 100%
   z-index: 0;
 }
 
+.banner_element {
+  position: relative;
+  margin: auto;
+}
 
 .banner{
-
   position: relative;
   left: -13%;
   min-width: 126%;
-
-
 }
+
 #hovedside_boks{
   display: grid;
   grid-template-columns: repeat(4,1fr);
@@ -221,4 +223,62 @@ height: 100%
 
 .footer_element p a:hover{
   text-decoration: underline;
+}
+
+.slides{
+  display: none;
+}
+
+.prev, .next{
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  user-select: none;
+}
+
+.next{
+  right: 0;
+}
+
+.dots{
+  text-align: center;
+}
+
+.dot{
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: rgba(0, 0, 0, 0.8);
+  border: 1px solid white;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover{
+  background-color: white;
+}
+
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
 }
