--- a/P3/style.css
+++ b/P3/style.css
@@ -89,17 +89,6 @@ height: 100%
   z-index: 0;
 }
 
-.banner_element {
-  position: relative;
-  margin: auto;
-}
-
-.banner{
-  position: relative;
-  left: -13%;
-  min-width: 126%;
-}
-
 #hovedside_boks{
   display: grid;
   grid-template-columns: repeat(4,1fr);
@@ -165,6 +154,20 @@ height: 100%
   border-style: solid;
 }
 
+.banner_element {
+  position: relative;
+  margin: auto;
+  background-color: black;
+  left: -13%;
+  min-width: 126%;
+}
+
+.banner{
+  position: relative;
+  left: -13%;
+  min-width: 126%;
+}
+
 .slides{
   display: none;
 }
@@ -182,21 +185,28 @@ height: 100%
   user-select: none;
 }
 
+.prev{
+  left: 15px;
+}
+
 .next{
-  right: 0;
+  right: 15px;
 }
 
 .dots{
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  bottom: 15px;
+  width: 100vw;
 }
 
 .dot{
   cursor: pointer;
   height: 15px;
   width: 15px;
-  margin: 0 2px;
-  background-color: rgba(0, 0, 0, 0.8);
-  border: 1px solid white;
+  margin: 0 10px;
+  background-color: rgba(255, 255, 255, 0.8);
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
