--- a/P3/style.css
+++ b/P3/style.css
@@ -102,21 +102,19 @@ height: 100%
 .nyheter_boks{
   grid-column-start:1;
   grid-column-end: 3;
-  justify-content: center;
+  text-align: center;
+  font-weight: bold;
   grid-gap: 2000px;
-  border-radius: 2px;
-  border-color: red;
-  border-style: solid;
-  padding-left: 20px;
+  border-bottom: 1px red solid;
+  border-right: 1px red solid;
 }
 .tekst_boks{
   grid-row: 2/3;
   grid-column: 1/3;
-  border-radius: 1px;
-  border-color: black;
-  border-style: solid;
   padding: 20px;
+  border-right: 1px red solid;
 }
+
 #festet{
  grid-column: 3;
  grid-row: 1/3;
