--- a/P3/style.css
+++ b/P3/style.css
@@ -16,15 +16,30 @@ p {
 body {
   overflow-x: hidden;
 }
-a{
+.oversikt_undergrupper_boks{
+  margin: auto;
+  padding: 50px;
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  grid-column-gap: 25px;
+  grid-template-rows: repeat(4,1fr);
+  grid-row-gap: 50px;
+  justify-content: center;
+}
+.oversikt_undergrupper_boks a{
+
   margin-bottom: 25px;
   background-color: inherit;
   line-height: 1.5;
-  font-size: 16px;
   color: inherit;
   text-decoration: none;
   text-align: center;
-  position: relative;
+  width: 50%;
+  margin-left: 25%;
+}
+
+.oversikt_undergrupper_boks h1{
+  text-align: center;
 }
 .Arkiv_Bilder{
 
@@ -169,15 +184,6 @@ height: 100%
   width: 60%;
 }
 
-.oversikt_undergrupper_boks{
-
-  display: grid;
-  grid-template-columns: repeat(3,1fr);
-  grid-column-gap: 25px;
-  grid-template-rows: repeat(4,1fr);
-  grid-row-gap: 50px;
-  justify-content: center;
-}
 .undergrupper_boks{
   grid-row: 1/3;
   grid-column: 1/3;
