--- a/P3/style.css
+++ b/P3/style.css
@@ -143,11 +143,10 @@ height: 100%
 .gruppeleder {
   grid-column: 3;
   padding: 20px;
-
 }
 
 .lederbilde{
-  padding: 0 20% 0 20%;
+  padding-left: 20%;
   width: 60%;
 }
 
@@ -159,13 +158,6 @@ height: 100%
   grid-template-rows: repeat(4,1fr);
   grid-row-gap: 50px;
   justify-content: center;
-}
-.undergrupper_boks{
-  grid-row: 1/3;
-  grid-column: 1/3;
-  border-radius: 1px;
-  border-color: black;
-  border-style: solid;
 }
 
 .banner_element {
