--- a/P3/style.css
+++ b/P3/style.css
@@ -45,14 +45,24 @@ body {
 
   display: grid;
   grid-template-rows: 30px 20vh;
-  grid-template-columns:0.1fr repeat(5,1fr) 0.1fr;
   grid-column-gap: 3px;
   justify-content: center;
   border-bottom: 1px black solid;
-
-
-
+  grid-template-columns:0.1fr repeat(5,1fr) 0.1fr;
 }
+
+@media only screen and (max-width: 900px) {
+.Arkiv_Bilder{
+  grid-template-columns:0.1fr repeat(4,1fr) 0.1fr;
+}
+}
+@media only screen and (max-width: 700px) {
+.Arkiv_Bilder{
+  grid-template-columns:0.1fr repeat(3,1fr) 0.1fr;
+  background: red;
+}
+}
+
 .hoverable{ /* alle bilder i arkivet har denne*/
   margin: auto;
   display: grid;
@@ -96,7 +106,7 @@ body {
 
 }
 iframe{
-  /*TODO: trenger å sette iframe høyde lik 9/16 av bredden */
+
 width: 100%;
 height: 100%
   }
