--- a/P3/style.css
+++ b/P3/style.css
@@ -179,6 +179,7 @@ height: 100%
 .gruppeboks {
   display: grid;
   grid-template-columns: repeat(3,1fr);
+  padding-bottom: 50px;
 }
 
 .gruppetekst {
