--- a/P3/style.css
+++ b/P3/style.css
@@ -16,20 +16,21 @@ p {
 body {
   overflow-x: hidden;
 }
+
 .oversikt_undergrupper_boks{
   margin: auto;
-  padding: 50px;
   display: grid;
-  grid-template-columns: repeat(3,1fr);
-  grid-column-gap: 25px;
-  grid-template-rows: repeat(4,1fr);
-  grid-row-gap: 50px;
+  grid-template-columns: repeat(3,35%);
+  grid-column-gap: 15px;
+  grid-template-rows: repeat(4,350px);
+  grid-row-gap: 25px;
   justify-content: center;
 }
+
 .oversikt_undergrupper_boks a{
   margin-bottom: 25px;
   background-color: inherit;
-  line-height: 0;
+  line-height: 1.5;
   color: inherit;
   text-decoration: none;
   text-align: center;
@@ -41,16 +42,16 @@ body {
 .oversikt_undergrupper_boks h1{
   text-align: center;
 }
-.oversikt_undergrupper_boks{
-  display: grid;
-  grid-template-columns: repeat(3,400px);
-  grid-column-gap: 15px;
-  grid-template-rows: repeat(4,300px);
-  grid-row-gap: 25px;
-  justify-content: center;
-}
-.Arkiv_Bilder{
 
+@media only screen and (max-width: 900px) {
+  .oversikt_undergrupper_boks{
+    grid-template-columns: 1fr;
+    grid-column-gap: 0;
+    grid-template-rows: repeat(12, 350px);
+  }
+}
+
+.Arkiv_Bilder{
   display: grid;
   grid-template-rows: 30px 20vh;
   grid-column-gap: 3px;
