--- a/P3/style.css
+++ b/P3/style.css
@@ -59,7 +59,7 @@ body {
   grid-template-columns:0.1fr repeat(5,1fr) 0.1fr;
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 1000px) {
 .Arkiv_Bilder{
 
   grid-template-columns:0.1fr repeat(4,1fr) 0.1fr;
@@ -86,7 +86,7 @@ body {
   padding:0px;
   margin: auto;
   width: 100%;
-  max-height: 20vh;
+  height: 18vh;
 
 }
 .img_in_focus{ /* brukes for å få et bilde i fokus*/
