--- a/P3/style.css
+++ b/P3/style.css
@@ -16,39 +16,55 @@ p {
 body {
   overflow-x: hidden;
 }
+/*
 .oversikt_undergrupper_boks{
   margin: auto;
   padding: 50px;
   display: grid;
-  grid-template-columns: repeat(3,1fr);
-  grid-column-gap: 25px;
-  grid-template-rows: repeat(4,1fr);
-  grid-row-gap: 50px;
-  justify-content: center;
-}
-.oversikt_undergrupper_boks a{
-  margin-bottom: 25px;
-  background-color: inherit;
-  line-height: 0;
-  color: inherit;
-  text-decoration: none;
-  text-align: center;
-  width: 50%;
-  margin-left: 25%;
-  font-size: 18px;
-}
-
-.oversikt_undergrupper_boks h1{
-  text-align: center;
-}
-.oversikt_undergrupper_boks{
-  display: grid;
-  grid-template-columns: repeat(3,400px);
+  grid-template-columns: repeat(3,33%);
   grid-column-gap: 15px;
-  grid-template-rows: repeat(4,300px);
+  grid-template-rows: repeat(4,25%);
   grid-row-gap: 25px;
   justify-content: center;
 }
+*/
+.oversikt_undergrupper_boks{
+  margin: auto;
+  padding: 25px;
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  grid-template-rows: repeat(4,325px);
+  grid-column-gap: 100px;
+  grid-row-gap: 25px;
+  justify-content: space-between;
+
+}
+
+.oversikt_undergrupper_boks a{
+  margin-bottom: 25px;
+  background-color: inherit;
+  line-height: 1.5;
+  color: inherit;
+  text-decoration: none;
+ /*denne kan brukes til å forandre width på text*/
+  font-size: 20px;
+  /*margin-left: 25%;*/
+}
+
+.oversikt_undergrupper_boks h3{
+  text-align: center;
+  margin-top: 0;
+}
+@media only screen and (max-width: 900px){
+  .oversikt_undergrupper_boks{
+    grid-template-rows: repeat(11,300px);
+    grid-template-columns: 1fr;
+    justify-content: center;
+    grid-row-gap: 75px;
+  }
+
+}
+
 .Arkiv_Bilder{
 
   display: grid;
