--- a/P3/style.css
+++ b/P3/style.css
@@ -221,6 +221,28 @@ height: 100%
   height: 60vh;
   max-width: 80vw;
 }
+@media only screen and (max-width: 1400px) {
+    #hovedside_boks{
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 50px repeat(2, auto);
+    }
+
+    #festet{
+      grid-row: 2;
+      grid-column: 2;
+    }
+    .tekst_boks{
+      grid-row: 2;
+      grid-column: 1;
+    }
+    #kalender_boks{
+      grid-row: 3;
+      grid-column: 1/3;
+    }
+    #kalender_boks iframe{
+      width: 100%;
+    }
+  }
 
 @media only screen and (max-width: 900px) {
   #hovedside_boks{
@@ -312,8 +334,6 @@ height: 100%
 
 .slides{
   display: none;
-  min-height: 20vh;
-  max-height: 40vh;
   width: 100vw;
   object-fit: cover;
 }
