--- a/P3/style.css
+++ b/P3/style.css
@@ -320,12 +320,14 @@ height: 100%
   background-color: black;
   left: 0;
   top: 80px;
+  width: 100%;
 }
 
 .banner{
   position: absolute;
   left: 0;
   top: 80px;
+  width: 100%;
 }
 
 .banner_page{
